@@ -47,6 +47,11 @@
         <default-filename>makefile.dmc</default-filename>
     </format>
 
+    <format id="dmars_smake">
+        <description>Digital Mars makefiles for SMAKE</description>
+        <default-filename>makefile.dms</default-filename>
+    </format>
+
     <format id="cbuilderx">
         <description>C++ Builder X project files</description>
         <default-filename>
